--- a/public/404.html
+++ b/public/404.html
@@ -272,7 +272,19 @@
   </ul>
   
   <ul>
-    <li><a href="https://agitated-wilson-0f2190.netlify.com/publication/clothing-search/">Mobile visual clothing search</a></li>
+    <li><a href="https://agitated-wilson-0f2190.netlify.com/publication/turfs_gecco_2014/">A global survey of TURF-reserves, Territorial Use Rights for Fisheries coupled with marine reserves</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://agitated-wilson-0f2190.netlify.com/publication/fish_response_el_nino_meps/">Eastern Pacific reef fish responses to coral recovery following El Niño disturbances</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://agitated-wilson-0f2190.netlify.com/publication/coral_repro_2012/">Reef coral reproduction in the equatorial eastern Pacific: Costa Rica, Panamá, and the Galápagos Islands (Ecuador). VII. Siderastreidae, Psammocora stellata and Psammocora profundacella.</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://agitated-wilson-0f2190.netlify.com/publication/cryptofauna_meps_2011/">Environmental determinants of motile cryptofauna on an eastern Pacific coral reef</a></li>
   </ul>
   
   
@@ -282,7 +294,7 @@
   <h2>Talks</h2>
   
   <ul>
-    <li><a href="https://agitated-wilson-0f2190.netlify.com/talk/example-talk/">Example Talk</a></li>
+    <li><a href="https://agitated-wilson-0f2190.netlify.com/talk/ohi-ne/">Ocean Health Index in the US Northeast</a></li>
   </ul>
   
   
@@ -292,11 +304,11 @@
   <h2>Projects</h2>
   
   <ul>
-    <li><a href="https://agitated-wilson-0f2190.netlify.com/project/deep-learning/">Deep Learning</a></li>
+    <li><a href="https://agitated-wilson-0f2190.netlify.com/project/datalimited/">Data-Limited Fisheries</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://agitated-wilson-0f2190.netlify.com/project/example-external-project/">External Project</a></li>
+    <li><a href="https://agitated-wilson-0f2190.netlify.com/project/oceanhealthindex/">Ocean Health Index</a></li>
   </ul>
   
   
