--- a/public/project/example-external-project/index.html
+++ b/public/project/example-external-project/index.html
@@ -20,7 +20,7 @@
   <meta name="description" content="">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://agitated-wilson-0f2190.netlify.com/project/example-external-project/">
+  <link rel="alternate" hreflang="en-us" href="/project/example-external-project/">
 
   
 
@@ -74,15 +74,15 @@
   
 
   
-  <link rel="alternate" href="https://agitated-wilson-0f2190.netlify.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
-  <link rel="feed" href="https://agitated-wilson-0f2190.netlify.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="https://agitated-wilson-0f2190.netlify.com/project/example-external-project/">
+  <link rel="canonical" href="/project/example-external-project/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -90,7 +90,7 @@
   <meta property="twitter:creator" content="@jafflerbach">
   
   <meta property="og:site_name" content="Jamie Afflerbach">
-  <meta property="og:url" content="https://agitated-wilson-0f2190.netlify.com/project/example-external-project/">
+  <meta property="og:url" content="/project/example-external-project/">
   <meta property="og:title" content="External Project | Jamie Afflerbach">
   <meta property="og:description" content="">
   <meta property="og:locale" content="en-us">
@@ -271,35 +271,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=External%20Project&amp;url=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fproject%2fexample-external-project%2f"
+         href="https://twitter.com/intent/tweet?text=External%20Project&amp;url=%2fproject%2fexample-external-project%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fproject%2fexample-external-project%2f"
+         href="https://www.facebook.com/sharer.php?u=%2fproject%2fexample-external-project%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fproject%2fexample-external-project%2f&amp;title=External%20Project"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fproject%2fexample-external-project%2f&amp;title=External%20Project"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fproject%2fexample-external-project%2f&amp;title=External%20Project"
+         href="http://service.weibo.com/share/share.php?url=%2fproject%2fexample-external-project%2f&amp;title=External%20Project"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=External%20Project&amp;body=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fproject%2fexample-external-project%2f">
+         href="mailto:?subject=External%20Project&amp;body=%2fproject%2fexample-external-project%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -346,7 +346,7 @@
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
   <span itemprop="author">
     GA Cushen, MS Nixon</span>.
-  <a href="https://agitated-wilson-0f2190.netlify.com/publication/clothing-search/" itemprop="name">Mobile visual clothing search</a>.
+  <a href="/publication/clothing-search/" itemprop="name">Mobile visual clothing search</a>.
   In <em>ICMEW</em>,
   2013.
   <p>
@@ -371,12 +371,12 @@
 </button>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://agitated-wilson-0f2190.netlify.com/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
   Code
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://agitated-wilson-0f2190.netlify.com/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -388,22 +388,22 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://agitated-wilson-0f2190.netlify.com/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
   Poster
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://agitated-wilson-0f2190.netlify.com/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
   Slides
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://agitated-wilson-0f2190.netlify.com/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
   Video
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://agitated-wilson-0f2190.netlify.com/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
   Source Document
 </a>
 
