--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -16,7 +16,7 @@
   <meta name="description" content="Marine Data Scientist">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://agitated-wilson-0f2190.netlify.com/talk/">
+  <link rel="alternate" hreflang="en-us" href="/talk/">
 
   
 
@@ -63,15 +63,15 @@
   
 
   
-  <link rel="alternate" href="https://agitated-wilson-0f2190.netlify.com/talk/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
-  <link rel="feed" href="https://agitated-wilson-0f2190.netlify.com/talk/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="alternate" href="/talk/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="feed" href="/talk/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="https://agitated-wilson-0f2190.netlify.com/talk/">
+  <link rel="canonical" href="/talk/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -79,7 +79,7 @@
   <meta property="twitter:creator" content="@jafflerbach">
   
   <meta property="og:site_name" content="Jamie Afflerbach">
-  <meta property="og:url" content="https://agitated-wilson-0f2190.netlify.com/talk/">
+  <meta property="og:url" content="/talk/">
   <meta property="og:title" content="Recent &amp; Upcoming Talks | Jamie Afflerbach">
   <meta property="og:description" content="Marine Data Scientist">
   <meta property="og:locale" content="en-us">
@@ -263,7 +263,7 @@
             
               <div class="pub-list-item" style="margin-bottom: 1rem" itemscope itemtype="http://schema.org/Event">
   <i class="fa fa-comment-o pub-icon" aria-hidden="true"></i>
-  <span itemprop="name"><a href="https://agitated-wilson-0f2190.netlify.com/talk/example-talk/">Example Talk</a></span>
+  <span itemprop="name"><a href="/talk/example-talk/">Example Talk</a></span>
   <div itemprop="startDate">
     
     Jun 1, 2030
