trying to change talk format so it renders

--- a/public/publication/ensembles_fish_and_fisheries_2017/index.html
+++ b/public/publication/ensembles_fish_and_fisheries_2017/index.html
@@ -20,7 +20,7 @@
   <meta name="description" content="Fishery managers must often reconcile conflicting estimates of population status and trend. Superensemble models, commonly used in climate and weather forecasting, may provide an effective solution. This approach uses predictions from multiple models as covariates in an additional “superensemble” model fitted to known data. We evaluated the potential for ensemble averages and superensemble models (ensemble methods) to improve estimates of population status and trend for fisheries. We fit four widely applicable data-limited models that estimate stock biomass relative to equilibrium biomass at maximum sustainable yield (B/BMSY). We combined these estimates of recent fishery status and trends in B/BMSY with four ensemble methods: an ensemble average and three superensembles (a linear model, a random forest and a boosted regression tree). We trained our superensembles on 5,760 simulated stocks and tested them with cross-validation and against a global database of 249 stock assessments. Ensemble methods substantially improved estimates of population status and trend. Random forest and boosted regression trees performed the best at estimating population status: inaccuracy (median absolute proportional error) decreased from 0.42 – 0.56 to 0.32 – 0.33, rank-order correlation between predicted and true status improved from 0.02 – 0.32 to 0.44 – 0.48 and bias (median proportional error) declined from −0.22 – 0.31 to −0.12 – 0.03. We found similar improvements when predicting trend and when applying the simulation-trained superensembles to catch data for global fish stocks. Superensembles can optimally leverage multiple model predictions; however, they must be tested, formed from a diverse set of accurate models and built on a data set representative of the populations to which they are applied.">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://agitated-wilson-0f2190.netlify.com/publication/ensembles_fish_and_fisheries_2017/">
+  <link rel="alternate" hreflang="en-us" href="/publication/ensembles_fish_and_fisheries_2017/">
 
   
 
@@ -74,15 +74,15 @@
   
 
   
-  <link rel="alternate" href="https://agitated-wilson-0f2190.netlify.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
-  <link rel="feed" href="https://agitated-wilson-0f2190.netlify.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="https://agitated-wilson-0f2190.netlify.com/publication/ensembles_fish_and_fisheries_2017/">
+  <link rel="canonical" href="/publication/ensembles_fish_and_fisheries_2017/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -90,7 +90,7 @@
   <meta property="twitter:creator" content="@jafflerbach">
   
   <meta property="og:site_name" content="Jamie Afflerbach">
-  <meta property="og:url" content="https://agitated-wilson-0f2190.netlify.com/publication/ensembles_fish_and_fisheries_2017/">
+  <meta property="og:url" content="/publication/ensembles_fish_and_fisheries_2017/">
   <meta property="og:title" content="Improving estimates of population status and trend with superensemble models | Jamie Afflerbach">
   <meta property="og:description" content="Fishery managers must often reconcile conflicting estimates of population status and trend. Superensemble models, commonly used in climate and weather forecasting, may provide an effective solution. This approach uses predictions from multiple models as covariates in an additional “superensemble” model fitted to known data. We evaluated the potential for ensemble averages and superensemble models (ensemble methods) to improve estimates of population status and trend for fisheries. We fit four widely applicable data-limited models that estimate stock biomass relative to equilibrium biomass at maximum sustainable yield (B/BMSY). We combined these estimates of recent fishery status and trends in B/BMSY with four ensemble methods: an ensemble average and three superensembles (a linear model, a random forest and a boosted regression tree). We trained our superensembles on 5,760 simulated stocks and tested them with cross-validation and against a global database of 249 stock assessments. Ensemble methods substantially improved estimates of population status and trend. Random forest and boosted regression trees performed the best at estimating population status: inaccuracy (median absolute proportional error) decreased from 0.42 – 0.56 to 0.32 – 0.33, rank-order correlation between predicted and true status improved from 0.02 – 0.32 to 0.44 – 0.48 and bias (median proportional error) declined from −0.22 – 0.31 to −0.12 – 0.03. We found similar improvements when predicting trend and when applying the simulation-trained superensembles to catch data for global fish stocks. Superensembles can optimally leverage multiple model predictions; however, they must be tested, formed from a diverse set of accurate models and built on a data set representative of the populations to which they are applied.">
   <meta property="og:locale" content="en-us">
@@ -272,35 +272,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Improving%20estimates%20of%20population%20status%20and%20trend%20with%20superensemble%20models&amp;url=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fpublication%2fensembles_fish_and_fisheries_2017%2f"
+         href="https://twitter.com/intent/tweet?text=Improving%20estimates%20of%20population%20status%20and%20trend%20with%20superensemble%20models&amp;url=%2fpublication%2fensembles_fish_and_fisheries_2017%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fpublication%2fensembles_fish_and_fisheries_2017%2f"
+         href="https://www.facebook.com/sharer.php?u=%2fpublication%2fensembles_fish_and_fisheries_2017%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fpublication%2fensembles_fish_and_fisheries_2017%2f&amp;title=Improving%20estimates%20of%20population%20status%20and%20trend%20with%20superensemble%20models"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fensembles_fish_and_fisheries_2017%2f&amp;title=Improving%20estimates%20of%20population%20status%20and%20trend%20with%20superensemble%20models"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fpublication%2fensembles_fish_and_fisheries_2017%2f&amp;title=Improving%20estimates%20of%20population%20status%20and%20trend%20with%20superensemble%20models"
+         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fensembles_fish_and_fisheries_2017%2f&amp;title=Improving%20estimates%20of%20population%20status%20and%20trend%20with%20superensemble%20models"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Improving%20estimates%20of%20population%20status%20and%20trend%20with%20superensemble%20models&amp;body=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fpublication%2fensembles_fish_and_fisheries_2017%2f">
+         href="mailto:?subject=Improving%20estimates%20of%20population%20status%20and%20trend%20with%20superensemble%20models&amp;body=%2fpublication%2fensembles_fish_and_fisheries_2017%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -392,7 +392,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://agitated-wilson-0f2190.netlify.com/project/datalimited/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline" href="/project/datalimited/" target="_blank" rel="noopener">
   Project
 </a>
 
