--- a/public/publication/path_to_science_ecoevo/index.html
+++ b/public/publication/path_to_science_ecoevo/index.html
@@ -20,7 +20,7 @@
   <meta name="description" content="Reproducibility has long been a tenet of science but has been challenging to achieve—we learned this the hard way when our old approaches proved inadequate to efficiently reproduce our own work. Here we describe how several free software tools have fundamentally upgraded our approach to collaborative research, making our entire workflow more transparent and streamlined. By describing specific tools and how we incrementally began using them for the Ocean Health Index project, we hope to encourage others in the scientific community to do the same—so we can all produce better science in less time.">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://agitated-wilson-0f2190.netlify.com/publication/path_to_science_ecoevo/">
+  <link rel="alternate" hreflang="en-us" href="/publication/path_to_science_ecoevo/">
 
   
 
@@ -74,15 +74,15 @@
   
 
   
-  <link rel="alternate" href="https://agitated-wilson-0f2190.netlify.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
-  <link rel="feed" href="https://agitated-wilson-0f2190.netlify.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="https://agitated-wilson-0f2190.netlify.com/publication/path_to_science_ecoevo/">
+  <link rel="canonical" href="/publication/path_to_science_ecoevo/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -90,7 +90,7 @@
   <meta property="twitter:creator" content="@jafflerbach">
   
   <meta property="og:site_name" content="Jamie Afflerbach">
-  <meta property="og:url" content="https://agitated-wilson-0f2190.netlify.com/publication/path_to_science_ecoevo/">
+  <meta property="og:url" content="/publication/path_to_science_ecoevo/">
   <meta property="og:title" content="Our path to better science in less time using open data science tools | Jamie Afflerbach">
   <meta property="og:description" content="Reproducibility has long been a tenet of science but has been challenging to achieve—we learned this the hard way when our old approaches proved inadequate to efficiently reproduce our own work. Here we describe how several free software tools have fundamentally upgraded our approach to collaborative research, making our entire workflow more transparent and streamlined. By describing specific tools and how we incrementally began using them for the Ocean Health Index project, we hope to encourage others in the scientific community to do the same—so we can all produce better science in less time.">
   <meta property="og:locale" content="en-us">
@@ -272,35 +272,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Our%20path%20to%20better%20science%20in%20less%20time%20using%20open%20data%20science%20tools&amp;url=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fpublication%2fpath_to_science_ecoevo%2f"
+         href="https://twitter.com/intent/tweet?text=Our%20path%20to%20better%20science%20in%20less%20time%20using%20open%20data%20science%20tools&amp;url=%2fpublication%2fpath_to_science_ecoevo%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fpublication%2fpath_to_science_ecoevo%2f"
+         href="https://www.facebook.com/sharer.php?u=%2fpublication%2fpath_to_science_ecoevo%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fpublication%2fpath_to_science_ecoevo%2f&amp;title=Our%20path%20to%20better%20science%20in%20less%20time%20using%20open%20data%20science%20tools"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fpath_to_science_ecoevo%2f&amp;title=Our%20path%20to%20better%20science%20in%20less%20time%20using%20open%20data%20science%20tools"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fpublication%2fpath_to_science_ecoevo%2f&amp;title=Our%20path%20to%20better%20science%20in%20less%20time%20using%20open%20data%20science%20tools"
+         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fpath_to_science_ecoevo%2f&amp;title=Our%20path%20to%20better%20science%20in%20less%20time%20using%20open%20data%20science%20tools"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Our%20path%20to%20better%20science%20in%20less%20time%20using%20open%20data%20science%20tools&amp;body=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fpublication%2fpath_to_science_ecoevo%2f">
+         href="mailto:?subject=Our%20path%20to%20better%20science%20in%20less%20time%20using%20open%20data%20science%20tools&amp;body=%2fpublication%2fpath_to_science_ecoevo%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -388,7 +388,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://agitated-wilson-0f2190.netlify.com/project/oceanhealthindex" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline" href="/project/oceanhealthindex" target="_blank" rel="noopener">
   Project
 </a>
 
