--- a/public/project/datalimited/index.html
+++ b/public/project/datalimited/index.html
@@ -20,7 +20,7 @@
   <meta name="description" content="">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://agitated-wilson-0f2190.netlify.com/project/datalimited/">
+  <link rel="alternate" hreflang="en-us" href="/project/datalimited/">
 
   
 
@@ -74,15 +74,15 @@
   
 
   
-  <link rel="alternate" href="https://agitated-wilson-0f2190.netlify.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
-  <link rel="feed" href="https://agitated-wilson-0f2190.netlify.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="https://agitated-wilson-0f2190.netlify.com/project/datalimited/">
+  <link rel="canonical" href="/project/datalimited/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -90,7 +90,7 @@
   <meta property="twitter:creator" content="@jafflerbach">
   
   <meta property="og:site_name" content="Jamie Afflerbach">
-  <meta property="og:url" content="https://agitated-wilson-0f2190.netlify.com/project/datalimited/">
+  <meta property="og:url" content="/project/datalimited/">
   <meta property="og:title" content="Data-Limited Fisheries | Jamie Afflerbach">
   <meta property="og:description" content="">
   <meta property="og:locale" content="en-us">
@@ -271,35 +271,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Data-Limited%20Fisheries&amp;url=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fproject%2fdatalimited%2f"
+         href="https://twitter.com/intent/tweet?text=Data-Limited%20Fisheries&amp;url=%2fproject%2fdatalimited%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fproject%2fdatalimited%2f"
+         href="https://www.facebook.com/sharer.php?u=%2fproject%2fdatalimited%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fproject%2fdatalimited%2f&amp;title=Data-Limited%20Fisheries"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fproject%2fdatalimited%2f&amp;title=Data-Limited%20Fisheries"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fproject%2fdatalimited%2f&amp;title=Data-Limited%20Fisheries"
+         href="http://service.weibo.com/share/share.php?url=%2fproject%2fdatalimited%2f&amp;title=Data-Limited%20Fisheries"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Data-Limited%20Fisheries&amp;body=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fproject%2fdatalimited%2f">
+         href="mailto:?subject=Data-Limited%20Fisheries&amp;body=%2fproject%2fdatalimited%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -346,7 +346,7 @@
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
   <span itemprop="author">
     SC Anderson, AB Cooper, OP Jensen, C Minto, JT Thorson, JC Walsh, JC Afflerbach, M Dickey-Collas, KM Kleisner, C Longo, GC Osio, D Ovando, I Mosqueira, AA Rosenberg, ER Selig</span>.
-  <a href="https://agitated-wilson-0f2190.netlify.com/publication/ensembles_fish_and_fisheries_2017/" itemprop="name">Improving estimates of population status and trend with superensemble models</a>.
+  <a href="/publication/ensembles_fish_and_fisheries_2017/" itemprop="name">Improving estimates of population status and trend with superensemble models</a>.
   In <em>Fish and Fisheries</em>,
   2017.
   <p>
@@ -369,7 +369,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://agitated-wilson-0f2190.netlify.com/project/datalimited/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="/project/datalimited/" target="_blank" rel="noopener">
   Project
 </a>
 
@@ -394,7 +394,7 @@
         
           <div class="pub-list-item" style="margin-bottom: 1rem" itemscope itemtype="http://schema.org/Event">
   <i class="fa fa-comment-o pub-icon" aria-hidden="true"></i>
-  <span itemprop="name"><a href="https://agitated-wilson-0f2190.netlify.com/publication/ensembles_fish_and_fisheries_2017/">Improving estimates of population status and trend with superensemble models</a></span>
+  <span itemprop="name"><a href="/publication/ensembles_fish_and_fisheries_2017/">Improving estimates of population status and trend with superensemble models</a></span>
   <div itemprop="startDate">
     
     Jan 30, 2017
