--- a/public/publication/ohi_fiveyears_plos/index.html
+++ b/public/publication/ohi_fiveyears_plos/index.html
@@ -20,7 +20,7 @@
   <meta name="description" content="Growing international and national focus on quantitatively measuring and improving ocean health has increased the need for comprehensive, scientific, and repeated indicators to track progress towards achieving policy and societal goals. The Ocean Health Index (OHI) is one of the few indicators available for this purpose. Here we present results from five years of annual global assessment for 220 countries and territories, evaluating potential drivers and consequences of changes and presenting lessons learned about the challenges of using composite indicators to measure sustainability goals. Globally scores have shown little change, as would be expected. However, individual countries have seen notable increases or declines due in particular to improvements in the harvest and management of wild-caught fisheries, the creation of marine protected areas (MPAs), and decreases in natural product harvest. Rapid loss of sea ice and the consequent reduction of coastal protection from that sea ice was also responsible for declines in overall ocean health in many Arctic and sub-Arctic countries. The OHI performed reasonably well at predicting near-term future scores for many of the ten goals measured, but data gaps and limitations hindered these predictions for many other goals. Ultimately, all indicators face the substantial challenge of informing policy for progress toward broad goals and objectives with insufficient monitoring and assessment data. If countries and the global community hope to achieve and maintain healthy oceans, we will need to dedicate significant resources to measuring what we are trying to manage.">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://agitated-wilson-0f2190.netlify.com/publication/ohi_fiveyears_plos/">
+  <link rel="alternate" hreflang="en-us" href="/publication/ohi_fiveyears_plos/">
 
   
 
@@ -74,15 +74,15 @@
   
 
   
-  <link rel="alternate" href="https://agitated-wilson-0f2190.netlify.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
-  <link rel="feed" href="https://agitated-wilson-0f2190.netlify.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="https://agitated-wilson-0f2190.netlify.com/publication/ohi_fiveyears_plos/">
+  <link rel="canonical" href="/publication/ohi_fiveyears_plos/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -90,7 +90,7 @@
   <meta property="twitter:creator" content="@jafflerbach">
   
   <meta property="og:site_name" content="Jamie Afflerbach">
-  <meta property="og:url" content="https://agitated-wilson-0f2190.netlify.com/publication/ohi_fiveyears_plos/">
+  <meta property="og:url" content="/publication/ohi_fiveyears_plos/">
   <meta property="og:title" content="Drivers and implications of change in global ocean health over the past five years | Jamie Afflerbach">
   <meta property="og:description" content="Growing international and national focus on quantitatively measuring and improving ocean health has increased the need for comprehensive, scientific, and repeated indicators to track progress towards achieving policy and societal goals. The Ocean Health Index (OHI) is one of the few indicators available for this purpose. Here we present results from five years of annual global assessment for 220 countries and territories, evaluating potential drivers and consequences of changes and presenting lessons learned about the challenges of using composite indicators to measure sustainability goals. Globally scores have shown little change, as would be expected. However, individual countries have seen notable increases or declines due in particular to improvements in the harvest and management of wild-caught fisheries, the creation of marine protected areas (MPAs), and decreases in natural product harvest. Rapid loss of sea ice and the consequent reduction of coastal protection from that sea ice was also responsible for declines in overall ocean health in many Arctic and sub-Arctic countries. The OHI performed reasonably well at predicting near-term future scores for many of the ten goals measured, but data gaps and limitations hindered these predictions for many other goals. Ultimately, all indicators face the substantial challenge of informing policy for progress toward broad goals and objectives with insufficient monitoring and assessment data. If countries and the global community hope to achieve and maintain healthy oceans, we will need to dedicate significant resources to measuring what we are trying to manage.">
   <meta property="og:locale" content="en-us">
@@ -272,35 +272,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Drivers%20and%20implications%20of%20change%20in%20global%20ocean%20health%20over%20the%20past%20five%20years&amp;url=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fpublication%2fohi_fiveyears_plos%2f"
+         href="https://twitter.com/intent/tweet?text=Drivers%20and%20implications%20of%20change%20in%20global%20ocean%20health%20over%20the%20past%20five%20years&amp;url=%2fpublication%2fohi_fiveyears_plos%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fpublication%2fohi_fiveyears_plos%2f"
+         href="https://www.facebook.com/sharer.php?u=%2fpublication%2fohi_fiveyears_plos%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fpublication%2fohi_fiveyears_plos%2f&amp;title=Drivers%20and%20implications%20of%20change%20in%20global%20ocean%20health%20over%20the%20past%20five%20years"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fohi_fiveyears_plos%2f&amp;title=Drivers%20and%20implications%20of%20change%20in%20global%20ocean%20health%20over%20the%20past%20five%20years"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fpublication%2fohi_fiveyears_plos%2f&amp;title=Drivers%20and%20implications%20of%20change%20in%20global%20ocean%20health%20over%20the%20past%20five%20years"
+         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fohi_fiveyears_plos%2f&amp;title=Drivers%20and%20implications%20of%20change%20in%20global%20ocean%20health%20over%20the%20past%20five%20years"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Drivers%20and%20implications%20of%20change%20in%20global%20ocean%20health%20over%20the%20past%20five%20years&amp;body=https%3a%2f%2fagitated-wilson-0f2190.netlify.com%2fpublication%2fohi_fiveyears_plos%2f">
+         href="mailto:?subject=Drivers%20and%20implications%20of%20change%20in%20global%20ocean%20health%20over%20the%20past%20five%20years&amp;body=%2fpublication%2fohi_fiveyears_plos%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -396,7 +396,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://agitated-wilson-0f2190.netlify.com/project/oceanhealthindex/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline" href="/project/oceanhealthindex/" target="_blank" rel="noopener">
   Project
 </a>
 
