post isnt showing up

--- a/public/404.html
+++ b/public/404.html
@@ -258,7 +258,7 @@
   <h2>Posts</h2>
   
   <ul>
-    <li><a href="/post/global_seafood_growth_dataviz/">Visualizing growth in global seafood production</a></li>
+    <li><a href="/post/global_seafood_growth_dataviz/"></a></li>
   </ul>
   
   
