--- a/public/404.html
+++ b/public/404.html
@@ -258,6 +258,10 @@
   <h2>Posts</h2>
   
   <ul>
+    <li><a href="/post/test/">test</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/post/global_seafood_growth_dataviz/"></a></li>
   </ul>
   
