...still... changed to yaml head

--- a/public/404.html
+++ b/public/404.html
@@ -262,7 +262,7 @@
   </ul>
   
   <ul>
-    <li><a href="/post/global_seafood_growth_dataviz/"></a></li>
+    <li><a href="/post/global_seafood_growth_dataviz/">Visualizing growth in global seafood production</a></li>
   </ul>
   
   
