--- a/public/404.html
+++ b/public/404.html
@@ -258,6 +258,10 @@
   <h2>Posts</h2>
   
   <ul>
+    <li><a href="/post/cropping-rasters-down-to-size/">Cropping (rasters) down to size</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/post/global_seafood_growth_dataviz/">Visualizing growth in global seafood production</a></li>
   </ul>
   
