--- a/public/404.html
+++ b/public/404.html
@@ -258,7 +258,7 @@
   <h2>Posts</h2>
   
   <ul>
-    <li><a href="/post/cropping-rasters-down-to-size/">Cropping (rasters) down to size</a></li>
+    <li><a href="/post/cropping-rasters-down-to-size/">Cropping rasters down to size</a></li>
   </ul>
   
   <ul>
