--- a/public/index.html
+++ b/public/index.html
@@ -1205,7 +1205,7 @@ I also lead and support data science training efforts for environmental scientis
   </h3>
   <div class="article-style" itemprop="articleBody">
     
-    This blog post was written for OHI-Science.org
+    This blog post was originally written for OHI-Science.org
 A significant portion of my work on the Ocean Health Index (OHI) involves working with raster data, a specific type of spatial data where values are held in grid cells. The data I work with varies from high resolution, remotely sensed data on sea surface temperature to coarse, modeled data on global fish catch. When I was working on the global assessment, I dealt with raster data at a global scale.
     
   </div>
